Fixed Bugs and Tests, Refactored Event and Slot Service